# SimpleRayCaster

./: CMakeLists.txt  README.md  main.cpp
include/: FastList.h  GeometryHelpers.h  Light.h  Linalg.h  Matrix.h  Ray.h  Raycasting.h  SDLHelpers.h  SceneObject.h  SceneProperties.h  Vector.h
src/: Linalg.cpp  Matrix.cpp
